# repod

./: .rpdignore  README.md  pyproject.toml  repod.md
.github/workflows/: release.yml
src/repod/: __init__.py  cli.py  core.py
